# Sylvan-game

./: Anchor.toml  README.md  package.json
programs/sylvan_new/: Cargo.toml
programs/sylvan_new/src/: lib.rs
sylvan_front/: index.html  package-lock.json  package.json  vite.config.ts
sylvan_front/public/music/: ambient.mp3:Zone.Identifier
sylvan_front/src/: App.tsx  Layout.tsx  index.css  main.tsx
sylvan_front/src/components/: PackModal.tsx  PlanetScene.tsx
sylvan_front/src/hooks/: useSylvanGameStore.ts
sylvan_front/src/idl/: sylvan.json
sylvan_front/src/pages/: LandsPage.tsx  MyLandPage.tsx
sylvan_front/src/solana/: connection.ts  wallet.tsx
tests/: sylvan_new.ts
