[package]
name = "sylvan_new"
version = "0.1.0"
description = "Sylvan MVP smart contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sylvan_new"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = { version = "0.31.1", features = ["idl-build"] }

